# snake

./: .gitignore  CMakeLists.txt  ReadMe.md  build.bat  main.cpp
Engine/: Game.cpp  Game.hpp  Window.cpp  Window.hpp
Entity/: Snake.cpp  Snake.hpp  SnakeStructure.hpp  TextBox.cpp  TextBox.hpp
Timer/: Timer.cpp  Timer.hpp
World/: World.cpp  World.hpp
